 - [web] reset multiple-selection mode after deleting cards, events or tasks
 - [web] fixed exception when moving tasks to a different calendar
 - [web] fixed printing of long mail (#3731)
 - [web] fixed position of ghost block when creating an event from DnD
 - [web] fixed avatar image in autocompletion
 - [web] restored expunge of current mailbox when leaving the Mail module
 - [eas] fixed long GUID issue preventing sometimes synchronisation (#3460)

3.1.4 (2016-07-12)
------------------

New features
 - [core] new sogo-tool truncate-calendar feature (#1513, #3141)
 - [eas] initial Out-of-Office support in EAS
 - [oc] initial support for calendar and address book sharing with OpenChange

Enhancements
 - [eas] use the preferred email identity in EAS if valid (#3698)
 - [eas] handle inline attachments during EAS content generation
 - [web] all batch operations can now be performed on selected messages in advanced search mode
 - [web] add date picker to change date, week, or month of current Calendar view
 - [web] style cancelled events in Calendar module
 - [web] replace sortable library for better support with Firefox
 - [web] stage-1 tuning of sgColorPicker directive
 - [oc] better handling of nested attachments with OpenChange

Bug fixes
 - [web] fixed crash when an attachment filename has no extension
 - [web] fixed selection of transparent all-day events (#3744)
 - [web] leaving the dropping area while dragging a file was blocking the mail editor
 - [web] fixed scrolling of all-day events (#3190)
 - [eas] handle base64 EAS protocol version
 - [eas] handle missing IMAP folders from a hierarchy using EAS

3.1.3 (2016-06-22)
------------------

New features
 - [core] now possible to define default Sieve filters (#2949)
 - [core] now possible to set vacation message start date (#3679)
 - [web] add a header and/or footer to the vacation message (#1961)
 - [web] specify a custom subject for the vacation message (#685, #1447)

Enhancements