@@ -1,6 +1,6 @@
 /* NGVCard+SOGo.h - this file is part of SOGo
  *
- * Copyright (C) 2009-2015 Inverse inc.
+ * Copyright (C) 2009-2016 Inverse inc.
  *
  * This file is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -48,6 +48,9 @@
 - (NSString *) mobile;
 - (NSString *) pager;
 - (NSCalendarDate *) birthday;
+
+- (void) setNotes: (NSArray *) newNotes;
+- (NSArray *) notes;
 
 @end
 
