@@ -147,10 +147,12 @@
               </div>
             </div>
 
-            <div class="pseudo-input-container" ng-show="editor.card.note">
-              <label class="pseudo-input-label"><var:string label:value="Note"/></label>
-              <div class="pseudo-input-field">
-                <div ng-bind-html="editor.card.note"><!-- note --></div>
+            <div class="section" ng-show="editor.card.notes">
+              <div class="pseudo-input-container" ng-repeat="note in editor.card.notes">
+                <label class="pseudo-input-label"><var:string label:value="Note"/></label>
+                <div class="pseudo-input-field">
+                  <div ng-bind-html="note"><!-- note --></div>
+                </div>
               </div>
             </div>
 
